manifests/infra/whoami/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      nodeSelector:
        workload: apps
      containers:
        - name: whoami
          image: traefik/whoami:latest
          ports:
            - containerPort: 80
